# Acala

./: .codecov.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  CryptoEspanto68  Dockerfile  HEADER-GPL3  Makefile  README.md  bug-bounty.md  build.rs  genesis-state  heroku.yml  out.rs  rename-crates-for-2.0.sh  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  lib.rs
ecosystem-modules/chainsafe/: Cargo.toml
ecosystem-modules/chainsafe/src/: lib.rs  mock.rs  tests.rs  weights.rs
ecosystem-modules/compound-cash/: Cargo.toml
ecosystem-modules/compound-cash/src/: lib.rs  mock.rs  tests.rs
ecosystem-modules/starport/: Cargo.toml  README.md
ecosystem-modules/starport/src/: lib.rs  mock.rs  tests.rs
inspect/: Cargo.toml
inspect/src/: cli.rs  command.rs  lib.rs
modules/account-tokenizer/: Cargo.toml
modules/account-tokenizer/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/accounts/: Cargo.toml
modules/accounts/rpc/: Cargo.toml
modules/accounts/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
modules/aggregated-dex/: Cargo.toml
modules/aggregated-dex/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/airdrop/: Cargo.toml
modules/airdrop/src/: lib.rs  mock.rs  tests.rs
modules/asset-registry/: Cargo.toml
modules/asset-registry/src/: benchmarking.rs  benchmarks.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
modules/auction-manager/: Cargo.toml
modules/auction-manager/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
modules/auction_manager/: Cargo.toml
modules/auction_manager/benchmarking/: Cargo.toml
modules/auction_manager/src/: default_weight.rs  lib.rs  mock.rs  tests.rs
modules/cdp-engine/: Cargo.toml
modules/cdp-engine/src/: benchmarking.rs  debit_exchange_rate_convertor.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/cdp-treasury/: Cargo.toml
modules/cdp-treasury/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/cdp_engine/: Cargo.toml
modules/cdp_engine/benchmarking/: Cargo.toml
modules/cdp_engine/src/: debit_exchange_rate_convertor.rs  default_weight.rs  lib.rs  mock.rs  tests.rs
modules/cdp_treasury/: Cargo.toml
modules/cdp_treasury/src/: benchmarking.rs  default_weight.rs  lib.rs  mock.rs  tests.rs
modules/collator-selection/: Cargo.toml
modules/collator-selection/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/currencies/: Cargo.toml  README.md
modules/currencies/runtime-api/: Cargo.toml
modules/currencies/src/: benchmarking.rs  default_weight.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/debits/: Cargo.toml
modules/debits/src/: lib.rs  mock.rs  tests.rs
modules/dex/: Cargo.toml
modules/dex-oracle/: Cargo.toml
modules/dex-oracle/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/dex/rpc/: Cargo.toml
modules/dex/src/: benchmarking.rs  default_weight.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/earning/: Cargo.toml
modules/earning/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
modules/emergency-shutdown/: Cargo.toml
modules/emergency-shutdown/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
node/: Cargo.toml
node/cli/: Cargo.toml  build.rs
node/cli/src/: cli.rs  command.rs  lib.rs
node/e2e-tests/: Cargo.toml
node/e2e-tests/src/: lib.rs  lib.rs_bak
node/e2e-tests/test-runner/: Cargo.toml
node/e2e-tests/test-service/: Cargo.toml
node/service/: Cargo.toml
node/service/src/: client.rs  fake_runtime_api.rs  instant_finalize.rs  lib.rs  mock_inherent_data_provider.rs
node/src/: main.rs
primitives/: Cargo.toml
primitives/evm/: Cargo.toml
primitives/evm-tracing/: Cargo.toml
primitives/evm-tracing/src/: ext.rs  lib.rs  runtime_api.rs
primitives/evm/src/: lib.rs
primitives/proc-macro/: Cargo.toml
primitives/proc-macro/src/: lib.rs
primitives/src/: bonding.rs  currency.rs  evm.rs  lib.rs  mocks.rs  nft.rs  signature.rs  task.rs  testing.rs  tests.rs  unchecked_extrinsic.rs
primitives/src/bonding/: controller.rs  error.rs  ledger.rs  mod.rs
rpc/: Cargo.toml
rpc/eth/: Cargo.toml
rpc/eth/runtime_api/: Cargo.toml
rpc/eth/src/: block_number.rs  bytes.rs  call_request.rs  eth_api.rs  lib.rs
rpc/evm/: Cargo.toml
rpc/evm-tracing/: Cargo.toml
rpc/evm-tracing/src/: lib.rs
rpc/evm/runtime_api/: Cargo.toml
rpc/evm/src/: bytes.rs  call_request.rs  evm_api.rs  lib.rs
rpc/src/: evm_tracing.rs  lib.rs
runtime/: Cargo.toml  build.rs
runtime/acala/: Cargo.toml  build.rs
runtime/acala/src/: authority.rs  benchmarks.rs  constants.rs  genesis_config_presets.rs  lib.rs  migrations.rs  xcm_config.rs
runtime/benchmarks/: Cargo.toml
runtime/benchmarks/src/: auction.rs  auction_manager.rs  authority.rs  cdp_engine.rs  cdp_treasury.rs  collator_selection.rs  currencies.rs  dex.rs  emergency_shutdown.rs  evm.rs  evm_accounts.rs  honzon.rs  incentives.rs  lib.rs  nominees_election.rs  oracle.rs  prices.rs  session_manager.rs  tokens.rs  transaction_payment.rs  vesting.rs
runtime/common/: Cargo.toml
runtime/common/benches/: precompile.rs
runtime/common/src/: benchmarks.rs  check_mortality.rs  check_nonce.rs  evm_tracer.rs  gas_to_weight_ratio.rs  homa.rs  lib.rs  mock.rs  xcm_config.rs  xcm_impl.rs
runtime/dev/: Cargo.toml
runtime/dev/src/: authority.rs  constants.rs  lib.rs
runtime/dev/tests/: integration_test.rs  weights_test.rs
runtime/integration-test/: Cargo.toml
runtime/integration-test/src/: integration_test.rs  (+2 more)
runtime/integration-tests/: Cargo.toml
runtime/karura/: Cargo.toml  build.rs
runtime/mandala/: Cargo.toml  build.rs
runtime/src/: constants.rs  lib.rs  types.rs
runtime/tests/: integration_test.rs  weights_test.rs
service/: Cargo.toml
service/src/: acala_chain_spec.rs  chain_spec.rs  client.rs  karura_chain_spec.rs  lib.rs  mandala_chain_spec.rs  mock_timestamp_data_provider.rs
utilities/: Cargo.toml
utilities/src/: lib.rs  offchain_lock.rs
(+944 files in other folders)
